<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arti_sipera"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:text="Pendaftaran akun silahkan isi"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/etReg_NIK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nik_ktp"
                    android:inputType="number"
                    android:maxLength="16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/etReg_NamaLengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/nama_lengkap" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/etReg_Alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/alamat"
                    android:inputType="textMultiLine|textImeMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/etReg_NoHP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/no_hp"
                    android:inputType="number"
                    android:maxLength="14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/etReg_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/etReg_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints="@string/prompt_password"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLength="16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/etReg_Password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/ulangi_password"
                    android:inputType="textPassword"
                    android:maxLength="16" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tempat Bertugas" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/ss_TPS"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:hintText="Pilih TPS Tempat Bertugas" />
                <!--                android:entries="@array/list_tps"-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_RegFotoKTP"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="3dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/tambahfoto" />

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="Foto KTP"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Upload foto sambil memegang KTP (Maks 5 MB)"
                        android:textColor="@android:color/holo_red_light" />

                    <Button
                        android:id="@+id/btnReg_Upload"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Upload foto"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btn_Reg"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/daftar"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_memiliki_akun_silahkan"/>
            <TextView
                android:id="@+id/btnReg_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Masuk"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>