<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.fragment_profil"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/pb_Profil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="invisible"
                android:layout_centerInParent="true"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="#689F38"
                android:layout_gravity="center"
                android:gravity="center">
                <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                    android:id="@+id/iv_FProfil"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/pendukung"/>
                <TextView
                    android:id="@+id/tvProfil_NamaRelawan"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="Nama Relawan"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word"
                    android:textSize="26sp"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_profilTOP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <EditText
                android:id="@+id/etProfil_nik"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/nik"
                android:autofillHints="@string/nik"
                android:inputType="text"
                android:enabled="false"/>
            <EditText
                android:id="@+id/etProfil_Alamat"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/alamat"
                android:enabled="false"/>
            <EditText
                android:id="@+id/etProfil_nohp"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/no_hp"
                android:enabled="false"/>
            <EditText
                android:id="@+id/etProfil_email"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/prompt_email"
                android:enabled="false"/>
            <EditText
                android:id="@+id/etProfil_tps"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="TPS"
                android:enabled="false"/>
            <Button
                android:id="@+id/btn_Logout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:background="@drawable/btnok"
                android:layout_marginTop="10dp"
                android:text="Keluar"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>